--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+  "name": "jsplay",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "body-parser": "^1.20.2",
+    "colours": "^0.6.0-2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "openai": "^3.1.0"
   }
 }
